--- a/Base_HTML_CSS/seminar4/HW/style.css
+++ b/Base_HTML_CSS/seminar4/HW/style.css
@@ -33,6 +33,7 @@ body {
 .navigation {
     display: flex;
     flex-direction: row;
+    align-items: center;
     margin-top: 51px;
     margin-bottom: 100px;
 }
