--- a/Base_HTML_CSS/lesson9/onlesson/style.css
+++ b/Base_HTML_CSS/lesson9/onlesson/style.css
@@ -1,3 +1,52 @@
-.heading {
-    
+* {
+    margin: 0;
+    padding: 0;
 }
+
+body {
+    background: var(--020-a-18, #020A18);
+}
+
+.content {
+    display: grid;
+    gap: 30px;
+    grid-template-columns: repeat(3, 362px);
+    justify-content: center;
+    padding-top: 264px;
+    padding-bottom: 243px;
+}
+
+.item {
+    border-radius: 10px;
+    background: #132035;
+    padding: 30px;
+    display: grid;
+    justify-items: center;
+    gap: 30px;
+}
+
+.item_big {
+    grid-column: span 2;
+    grid-row: span 2;
+    gap: 60px;
+}
+
+.heading {
+    font-family: Open Sans;
+    font-size: 25px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 125%;
+    color: #FFFFFF;
+}
+
+.item_text {
+    font-family: Open Sans;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 26px;
+    text-align: center;
+    color: #FFFFFF;
+}
+
