--- a/Base_HTML_CSS/lesson9/HW/style.css
+++ b/Base_HTML_CSS/lesson9/HW/style.css
@@ -1,7 +1,133 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     /*color: #ffffff;*/
 }
 
-.heading {
+.top {
+    display: grid;
+    grid-template-columns: repeat(3, 370px);
+    justify-content: center;
+    gap: 30px;
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+.top_item {
+    display: grid;
+    justify-items: center;
+    gap: 30px;
+}
+
+.top_heading {
+    color: #000;
+    font-family: Gilroy-Bold;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal
+
+}
+
+.top_item_text {
+    color: #666;
+    font-family: Gilroy-Regular;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+}
+
+.top_details {
+    color: #000;
+    font-family: Gilroy-Bold;
+    font-size: 11px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+}
+
+.content_head {
+    display: grid;
+    justify-content: center;
+    padding-top: 92px;
+    padding-bottom: 54px;
+}
+
+.content_head_1 {
+    color: #000;
+    font-family: Gilroy-Bold;
+    font-size: 45px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.content_head_text {
+    width: 682px;
+    color: #666;
+    font-family: Gilroy-Regular;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    justify-content: center;
+}
+
+.content_main {
+    display: grid;
+    grid-template-columns: repeat(3, 385px);
+    justify-content: center;
+    gap: 9px;
+    padding-bottom: 100px;
+}
+
+.content_item {
+    display: grid;
+    justify-items: center;
+}
+
+.content_item_img {
+    height: 289px;
+}
+
+.content_heading {
+    color: #000;
+    font-family: Gilroy-Bold;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    padding-bottom: 22px;
+}
+
+.content_item_text {
+    color: #AAA;
+    text-align: center;
+    font-family: Gilroy-Regular;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+    padding-bottom: 39px;
+}
+
+.content_item_btn {
+    width: 150px;
+    height: 50px;
+    flex-shrink: 0;
+    border-radius: 50px;
+    border: none;
+    background: #F25822;
     
+    /*текст кнопки*/
+    color: #FFF;
+    font-family: Gilroy-Bold;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
 }
