--- a/Base_HTML_CSS/lesson11/HW/style.css
+++ b/Base_HTML_CSS/lesson11/HW/style.css
@@ -13,6 +13,7 @@ body {
 	margin: 0 auto;
 }
 
+/*верхнее меню*/
 .hmenu {
     display: flex;
     justify-content: space-around;
@@ -29,6 +30,15 @@ body {
     background: #222;
 }
 
+/*кнопки справа в верхнем меню*/
+.hmenu__btns_group {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 150px;
+}
+
+
 .hmain {
     display: flex;
     justify-content: center;
@@ -43,15 +53,26 @@ body {
     padding-bottom: 48px;
 }
 
+/* карточки категорий */
 .cprev {
     display: grid;
     grid-template-columns: repeat(3, 360px);
     grid-template-rows: 260px 180px;
     justify-content: center;
     gap: 30px;
+}
+
+.cprev__item {
+    /*background-color: #C4C4C4;*/
     
 }
 
+.cprev__img {
+    background: rgba(33, 22, 22, 0.70);
+}
+
+
+/*Заголовок после карточек категорий и перед карточками товаров*/
 .ctitle {
     display: flex;
     flex-direction: column;
@@ -79,6 +100,7 @@ body {
     line-height: normal;
 }
 
+/* Карточки товаров */
 .cmain {
     display: grid;
     grid-template-columns: repeat(3, 360px);
