--- a/Base_HTML_CSS/lesson12/HW/style.css
+++ b/Base_HTML_CSS/lesson12/HW/style.css
@@ -5,6 +5,7 @@
 
 body {
     font-family: 'Lato', sans-serif;
+    margin: 0 auto;
 }
 
 .container {
@@ -15,10 +16,16 @@ body {
 /*верхнее меню*/
 .hmenu {
     display: flex;
-    justify-content: space-around;
-    align-items: center;
+    justify-content: center;
     height: 75px;
     background: #222;
+}
+
+.hmenu_btns {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 1130px;
 }
 
 /*кнопки справа в верхнем меню*/
@@ -29,13 +36,47 @@ body {
     width: 150px;
 }
 
-
 .hmain {
     display: flex;
-    justify-content: center;
+    justify-content: left;
     align-items: center;
     flex-direction: row;
     background: #F1E4E6;
+}
+
+.banner-titlewrapper {
+    display: flex;
+    justify-content: left;
+    gap: 16px;
+    padding-left: 64px;
+}
+
+.banner_rectangle {
+    width: 12px;
+    height: 92px;
+    flex-shrink: 0;
+    background: #F16D7F;
+}
+
+.bannertitle1 {
+    color: #222;
+    font-family: Lato;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: normal;
+}
+.bannertitle2 {
+    color: #222;
+    font-family: Lato;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.bannertitle2_2 {
+    color: #F16D7F;
 }
 
 .content {
@@ -53,15 +94,46 @@ body {
     gap: 30px;
 }
 
-.cprev__item {
-    /*background-color: #C4C4C4;*/
-    
+.cprev__item1 {
+    background-image: url('img/1-for_women.svg');
 }
 
-.cprev__img {
-    background: rgba(33, 22, 22, 0.70);
+.cprev__item2 {
+    background-image: url('img/2-for men.svg');
 }
 
+.cprev__item3 {
+    background-image: url('img/3-for kids.svg');
+}
+
+.cprev__item4 {
+    background-image: url('img/4-ACCESORIES.svg');
+    grid-column: span 3;
+}
+
+.cprev__bg {
+    background: rgba(33, 22, 22, 0.7);
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    cursor: pointer;
+}
+
+.cprev__text {
+    font-size: 16px;
+    line-height: 19px;
+    color: #ffffff;
+}
+
+.cprev__title {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 29px;
+    color: #f16d7f;
+}
 
 /*Заголовок после карточек категорий и перед карточками товаров*/
 .ctitle {
@@ -103,6 +175,7 @@ body {
 
 .cmain_item {
     justify-content: center;
+    background-color: #F8F8F8;
 }
 
 .cmain_img {
@@ -163,14 +236,87 @@ body {
     border-color: #F26376;
 }
 
+
 /* адаптив под планшет */
 
-@media (max-width: 1024px) and (min-width: 848px) {
+@media (max-width: 1024px) and (min-width: 768px) {
     .container {
 		width: 770px;
 	}
 
     .hmenu {
         height: 74px;
+    }
+
+    .hmenu_btns {
+        width: 704px;
+    }
+
+    .hmenu__btns_group {
+        width: 169px;
+    }
+
+    .hmain_img {
+        width: 386px;
+        height: 368px;
+    }
+
+    .banner-titlewrapper {
+        gap: 16px;
+        padding-left: 39px;
+    }
+
+    .bannertitle1 {
+        font-size: 44px;
+    }
+    .bannertitle2 {
+        font-size: 24px;
+    }
+
+    .content {
+        padding-bottom: 32.5px;
+    }
+
+    .cprev {
+        display: grid;
+        grid-template-columns: repeat(3, 231.973px);
+        grid-template-rows: 231.973px 116.043px;
+        justify-content: center;
+        gap: 19.38px;
+    }
+
+    .cprev__text {
+        font-size: 16px;
+        line-height: normal;
+    }
+    
+    .cprev__title {
+        font-size: 24px;
+        line-height: normal;
+    }
+
+    .ctitle {
+        padding-top: 109.92px;
+        padding-bottom: 73.74px;
+    }
+    
+    .cmain {
+        grid-template-columns: repeat(2, 360px);
+        grid-template-rows: repeat(3, 581px);
+        gap: 17px;
+    }
+
+    .cmain_desc {
+        padding: 25.35px 12.65px;
+    }
+
+    .cmain_text {
+        font-size: 14px;
+        padding-top: 12.65px;
+        padding-bottom: 18px;
+    }
+    
+    .footer {
+        padding-bottom: 70.52px;
     }
 }
