--- a/Base_HTML_CSS/lesson11/HW/style.css
+++ b/Base_HTML_CSS/lesson11/HW/style.css
@@ -17,6 +17,7 @@ body {
 .hmenu {
     display: flex;
     justify-content: center;
+    align-items: center;
     height: 75px;
     background: #222;
 }
@@ -24,8 +25,13 @@ body {
 .hmenu_btns {
     display: flex;
     justify-content: space-between;
-    align-items: center;
     width: 1130px;
+}
+
+.hmenu_left_part {
+    width: 110.999px;
+    display: flex;
+    justify-content: space-between;
 }
 
 /*кнопки справа в верхнем меню*/
@@ -33,7 +39,8 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 159px;
+    width: 230px;
+    height: 29px;
 }
 
 .hmain {
@@ -232,6 +239,7 @@ body {
     /*box*/
     width: 212px;
     height: 48px;
-    flex-shrink: 0;
+    /*flex-shrink: 0;*/
     border-color: #F26376;
+    background-color: #FFF;
 }
