--- a/Base_HTML_CSS/lesson12/HW/style.css
+++ b/Base_HTML_CSS/lesson12/HW/style.css
@@ -17,6 +17,7 @@ body {
 .hmenu {
     display: flex;
     justify-content: center;
+    align-items: center;
     height: 75px;
     background: #222;
 }
@@ -24,8 +25,13 @@ body {
 .hmenu_btns {
     display: flex;
     justify-content: space-between;
-    align-items: center;
     width: 1130px;
+}
+
+.hmenu_left_part {
+    width: 110.999px;
+    display: flex;
+    justify-content: space-between;
 }
 
 /*кнопки справа в верхнем меню*/
@@ -33,7 +39,8 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 150px;
+    width: 230px;
+    height: 29px;
 }
 
 .hmain {
@@ -232,10 +239,10 @@ body {
     /*box*/
     width: 212px;
     height: 48px;
-    flex-shrink: 0;
+    /*flex-shrink: 0;*/
     border-color: #F26376;
+    background-color: #FFF;
 }
-
 
 /* адаптив под планшет */
 
@@ -280,7 +287,7 @@ body {
     .cprev {
         display: grid;
         grid-template-columns: repeat(3, 231.973px);
-        grid-template-rows: 231.973px 116.043px;
+        grid-template-rows: 167.617px 116.043px;
         justify-content: center;
         gap: 19.38px;
     }
