--- a/Base_HTML_CSS/lesson16/HW/style.css
+++ b/Base_HTML_CSS/lesson16/HW/style.css
@@ -285,10 +285,26 @@ body {
 }
 
 .footer_main {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
     height: 448px;
+    background-image: url('img/f_bg-img.png');
+}
+
+.footer_main_bg {
+    background: rgba(244, 244, 244, 0.70);
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    cursor: pointer;
+}
+
+.footer_main_content {
+    display: flex;
+    justify-content: space-between;
+    width: 1130px;        
+    margin: 0 auto;        
 }
 
 .footer_main_item1_img {
